fixing a z-index bug on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -291,7 +291,7 @@
     position: absolute;
     top: 22px;
     width: 0;
-    z-index: 1;
+    /* z-index: 1; */
     left: 20px;
     border: medium solid var(--event-bg);
     border-width: 10px 10px 10px 0;
